Enabled SIMD profiling